# mathematical_functions

./: CMakeLists.txt  mathematical_functions.cpp  mathematical_functions.h  mathematical_functions_test.cpp
